# Torrent_downloader

./: .env.example  GEMINI.md  README.md  TVMD_API.md  check_aria2.py  pyproject.toml  requirements.txt  run_api.py  run_telegrambot.py  telegram_users.csv  test_api.py
app/: __main__.py  api_movies.py  api_series.py  aria2_handler.py  compare_and_plan.py  config.py  fs_utils.py  logging_config.py  main.py  ollama_selector.py  scraper.py  series_info.py  tvmd_client.py
docs/: blog_telegram_setup.md
telegram_bot/: README.md  bot.py
