[project]
name = "torrent-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "cloudscraper==1.2.71",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "lxml==4.9.3",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-telegram-bot>=20.0",
    "requests==2.31.0",
    "requests-html==0.10.0",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
]
